# InternalSystemsAgents

.claude/: settings.local.json
internal-agents/: .gitattributes  .gitignore  Makefile  README.md  pyproject.toml  run.ps1
internal-agents/scripts/: test_jira_connection.py  ws_demo.py
internal-agents/src/: config.py
internal-agents/src/agents/: base.py  data_analyst.py  data_collector.py  data_processor.py  orchestrator.py  reporter.py
internal-agents/src/api/: main.py
internal-agents/src/api/static/: chat.html
internal-agents/src/cache/: __init__.py  pipeline_cache.py
internal-agents/src/gateway/: mcp_gateway.py
internal-agents/src/gateway/connectors/: harvest.py  hubspot.py  jira.py  pandadoc.py  xero.py
internal-agents/src/models/: schemas.py
internal-agents/tests/: conftest.py  test_agents.py  test_e2e.py  test_gateway.py
